fixing contrast errors

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -40,7 +40,7 @@ nav ul {
 
 nav a {
 	display: block;
-	color: #fff;
+	color: black;
 	text-align: center;
 	padding: 1rem;
 	text-decoration: none;
